[package]
name = "search-posts"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[dependencies]
serde_json = '1'
unicode-segmentation = '1'
hashbrown = { version = '0.9', features = ['serde'] }
rayon = '1'
walkdir = '2'
itertools = '0.9'
tempfile = '3'
num_cpus = '1'
bincode = '1'

[dependencies.serde]
version = '1'
features = ['derive']